fix some minor warnings, add translations
